Updated site with a page

--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -62,6 +62,12 @@
     &-uppercase {
         text-transform: uppercase;
     }
+    &-capitalize {
+        text-transform: capitalize;
+    }
+    &-disabled {
+        color: #000000B2;
+    }
 }
 
 
