--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -15,6 +15,10 @@ body {
     padding: 0;
 }
 
+
+html {
+    scroll-behavior: smooth;
+}
 body {
     overflow-x: hidden;
     background-color: colors.$white;
