--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@use './colors' as colors;
+@use './mixins' as mixins;
 @import './font';
 @import './reset';
 @import './utils';
@@ -32,4 +34,77 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+
+form {
+    // background-color: red;
+    width: 23.875rem;
+    max-width: 100%;
+    display: block;
+    @include mixins.least-small-screen {
+        width: 20rem;
+        margin-inline: auto;
+    }
+
+}
+.liners {
+    // background-color: red;
+    display: flex;
+    gap: 1rem;
+
+    hr {
+        border-color: #CBCBCB99;
+        border-radius: 20px;
+        display: block;
+        width: 5.9375rem;
+
+        &.fill {
+            border-color: colors.$primary;
+        }
+    }
+}
+
+.form-input {
+    input {
+        width: 100%;
+        &[type="radio"] {
+            
+            width: 1rem;
+            height: 1rem;
+            accent-color: colors.$primary;
+            margin-right: .5rem;
+        }
+        
+        &:not([type="radio"]) {
+            display: block;
+            padding: .7rem 1rem;
+            border: 0.3px solid colors.$primary;
+            border-radius: 4px;
+            outline: 0;
+            margin-top: .5rem;
+        }
+        
+    }
+
+
+
+    & > div {
+        display: flex;
+        gap: 2rem;
+        margin-top: .3rem;
+
+    }
+
+}
+.form-cta {
+    // background-color: red;
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+
+    .btn {
+
+        padding: 1rem;
+    }
 }
