--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -93,6 +93,8 @@ form {
 .form-group {
     display: flex;
     // background-color: red;
+    align-items: center;
+    justify-content: space-between;
 
     gap: 1rem;
 
@@ -105,8 +107,16 @@ form {
     }
 }
 
+
+.ant-upload-select {
+    $size: 15rem;
+    width: $size !important;
+    height: $size !important;
+}
+
 .form-input {
     height: fit-content;
+    width: 100%;
     display: block;
     input {
         width: 100%;
@@ -162,6 +172,9 @@ form {
 
     gap: 1.5rem;
 
+    // background-color: red;
+    width: 100%;
+
     legend {
         border: 0;
         margin: 0;
@@ -173,6 +186,7 @@ form {
 
     label {
         cursor: pointer;
+        height: fit-content;
         input {
             width: 0;
             height: 0;
@@ -219,6 +233,17 @@ form {
 
             &.icon-female::before {
                 background-image: url('/icons/female-icon.svg');
+            }
+            &.icon-check::before {
+                background-image: url('/icons/check.svg');
+            }
+
+            &.icon-check-double::before {
+                background-image: url('/icons/check-double.svg');
+            }
+
+            &.icon-cross::before {
+                background-image: url('/icons/cross.svg');
             }
         }
     }
