--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -301,26 +301,32 @@ form {
 .rest-form{
     
     
-    & ~ .steps-action .btn {
-        display: block;
+    // & ~ .steps-action .btn {
+    //     display: block;
 
-        &.btn-verify {
-            display: none;
-        }
-    }
+    // }
+    // & ~ .steps-action .btn-verify {
+    //     display: none;
+    // }
 
     &[data-disabled="true"] {
         height: 0;
         overflow: hidden;
 
-        & ~ .steps-action .btn-verify {
-            display: block;
-        }
+        // & ~ .steps-action .btn-verify {
+        //     display: block;
+        // }
     }
 }
+
+
 .btn-submit {
     width: 100%;
     height: 4rem;
+
+    &[data-hide="true"] {
+        display: none;
+    }
 }
 
 
