Fixed checks auto scrolling to the top

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -201,6 +201,7 @@ form {
     label {
         cursor: pointer;
         height: fit-content;
+        position: relative;
         input {
             width: 0;
             height: 0;
