--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -24,7 +24,7 @@ body {
     background-color: colors.$white;
     font-size: 16px;
 
-    padding-top: 2.8125rem;
+    // padding-top: 2.8125rem;
     font-family: 'Poppins', sans-serif;
 }
 
