Updated form and template

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -431,3 +431,14 @@ form {
         opacity: 1;
     }
 }
+
+
+.attribution {
+    color: rgb(190, 189, 189);
+
+    text-align: center;
+}
+
+.text-uppercase {
+    text-transform: uppercase;
+}
