--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -218,7 +218,11 @@ form {
         &:has(input:disabled) {
             opacity: .6;
 
-            background-color: red;
+            // background-color: red;
+
+            // span {
+            //     background-color: transparent !important;
+            // }
         }
 
 
