--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -60,7 +60,6 @@ section.main-wrapper {
     flex-direction: column;
     align-items: center;
 
-
     .main-content {
         width: 100%;
         padding: 1rem !important;
@@ -452,6 +451,13 @@ form {
 
 .ticket-form {
     display: flex;
+    flex-direction: column;
+
+    row-gap: 3rem;
+
+    @include mixins.least-large-screen() {
+        flex-direction: row;
+    }
 
     & > div {
         flex: 1;
