--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -453,51 +453,133 @@ form {
     display: flex;
     flex-direction: column;
 
+    align-items: center;
+
     row-gap: 3rem;
 
     @include mixins.least-large-screen() {
         flex-direction: row;
+
+        // align-items: center;
+
+        gap: 5rem;
     }
 
-    & > div {
-        flex: 1;
+    .guest-card{
+
+        --state-color: inherit;
+        width: 40rem;
+        max-width: 100%;
+        
+        @include mixins.least-large-screen() {
+            flex: 1;
+            width: fit-content;
+        }
+
         box-shadow: rgba(16, 16, 16, 0.397) 0px 2px 8px 0px;
-        padding: 1rem;
+        padding: 2rem;
 
         border-radius: 2rem;
+        
+        outline-width: 1px;
+        outline-style: solid;
+        outline-color: var(--state-color);
 
-        &:has(button) {
-            box-shadow: none;
+        &[data-state="error"] {
+            --state-color: tomato;
+        }
+
+        &[data-state="loading"] {
+            --state-color: coral;
+        }
+
+        &[data-state="active"] {
+            // --state-color: darkolivegreen;
+            // --state-color: lime;
+            --state-color: lightgreen;
+        }
+
+        position: relative;
+        background-color: colors.$white;
+
+
+        &::after {
+            // content: '';
+            position: absolute;
+
+            width: 100%;
+            height: 1px;
+
+            
+            z-index: -1;
+
+            border-top: 5px dotted var(--state-color);
+
+            top: -50%;
+            left: 50%;
+
+            @include mixins.least-large-screen() {
+                top: 50%;
+                left: -50%;
+            }
+        }
+
+        &:first-of-type{
+            &::after {
+                left: 50%;
+
+                @include mixins.least-large-screen() {
+                    top: 50%;
+                    left: 50%;
+                }
+            }
         }
     }
 
 
-    div:has(button) {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
     button {
-        width: 15rem;
-        padding-block: 1rem;
+        // width: 15rem;
+
         max-width: 100%;
+        padding-block: 1rem;
+        padding-inline: 4rem;
         font-size: 1.5rem;
 
         cursor: pointer;
 
-        background-color: colors.$primary;
-        color: colors.$white-accent;
+        
         border: 0;
         border-radius: .5rem;
+
+        background-color: colors.$primary;
+        color: colors.$white;
+
+
+        &[data-state="active"] {
+            background-color: rgb(0, 165, 0);
+        }
+
+        &[data-state="error"] {
+            background-color: darkred;
+        }
+        
+        
+        &:disabled {
+            // opacity: .5 !important;
+            background-color: lightslategray;
+            color: lighten(colors.$primary, 90%);
+        }
     }
 
     .img-wrapper {
-        width: 100%;
-        height: 20rem;
-
+        max-width: 100%;
+        min-height: 20rem;
         // border: 1px solid red;
 
+        display: flex;
+        align-items: center;
+
+        margin-bottom: 2rem;
     }
 }
 
