--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -35,6 +35,9 @@
     &-18 {
         font-size: 1.125rem;
     }
+    &-32 {
+        font-size: 2rem;
+    }
     &-48 {
         font-size: 3rem;
     }
@@ -65,6 +68,7 @@
     &-capitalize {
         text-transform: capitalize;
     }
+    
     &-disabled {
         color: #000000B2;
     }
