Voting registration is ready

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -11,3 +11,7 @@ $elipse-2-background: linear-gradient(162.94deg, rgba(196, 196, 196, 0.2881) 11.
 .clr-primary {
     color: $primary;
 }
+
+.clr-white-accent {
+    color: $white-accent;
+}
