Done with vote UI

--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -35,6 +35,9 @@
     &-18 {
         font-size: 1.125rem;
     }
+    &-25 {
+        font-size: 1.5625rem;
+    }
     &-32 {
         font-size: 2rem;
     }
