--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -921,7 +921,9 @@ form {
 }
 
 .carousel-item {
-    height: 50vh;
+    min-height: 50vh;
+
+    
     width: 100%;
     scroll-snap-align: start;
 
