--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -948,7 +948,7 @@ form {
     // justify-content: center;
     align-items: center;
     // position: relative;
-    @include mixins.hide-scrollbar;
+    // @include mixins.hide-scrollbar;
 }
 
 .vote-lists {
