--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -141,12 +141,15 @@
 
     width: 40rem;
 
-    height: 28rem;
+    // min-height: 30rem;
+    // height: 26rem;
+
+    height: 30rem;
 
     border-radius: 12px;
     background-color: #f0f0f0;
     // padding: 2rem 0rem;
-    padding-block: 2rem 2.5rem;
+    padding-block: 4rem 2.5rem;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     
     display: flex;
@@ -192,13 +195,40 @@
         margin-right: 1.5rem;
     }
 
+
+    &:has(.avatar-wrapper-container>*:nth-child(n+2)) {
+        // background-color: lightblue;
+    
+        // /* Style applied only if there's more than 1 item */
+        // .avatar-wrapper {
+        //     --size: 100px;
+        // }
+    }
+
+}
+
+.avatar-wrapper-container {
+
+    &[data-multiple="true"] {
+        display: grid;
+        
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        /* Style applied only if there's more than 1 item */
+        .avatar-wrapper {
+            --size: 100px;
+        }
+    }
+
 }
 
 .avatar-wrapper {
 
-    $size: 200px;
-    width: $size;
-    height: $size;
+    --size: 200px;
+    width: var(--size);
+    height: var(--size);
+
+    flex: 1 1 var(--size);
 
     background-color: #e0e0e0;
     // border-radius: 50%;
@@ -276,6 +306,8 @@
         border-color: colors.$primary;
 
         cursor: pointer;
+
+        // margin-top: 1rem;
 
 
 
